--- a/src/styles/blocks/_slideshow.scss
+++ b/src/styles/blocks/_slideshow.scss
@@ -92,7 +92,7 @@
 
   &__picture {
     height: 100%;
-    max-width: 256px;
+    // max-width: 256px;
     object-fit: contain;
 
     @include onTablet {
