--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -33,19 +33,15 @@
     }
   }
 
-  // .swiper {
-  //   width: 600px;
-  //   height: 300px;
-
-  //   @include onTablet {
-  //     display: none;
-  //   }
-  // }
-
   .swiper {
     width: 100%;
     height: 100%;
     position: relative;
+    margin-top: 40px;
+
+    @include onTablet {
+      margin-top: 48px;
+    }
 
     @include onDesktop {
       display: none;
@@ -54,26 +50,18 @@
 
   .swiper-wrapper {
     gap: 16px;
-    padding-bottom: 25px;
-  }
+    padding-bottom: 30px;
 
-  .swiper .swiper-slide {
-    // text-align: center;
-    // font-size: 18px;
-    background: #fff;
-    display: flex;
-    width: fit-content !important;
-    // width: 100% !important;
-    // width: 100%;
-    // justify-content: center;
-    // align-items: center;
+    @include onTablet {
+      padding-bottom: 38px;
+    }
   }
 
   .swiper-slide img {
     display: block;
-    // width: 100%;
     height: 410px;
     object-fit: cover;
+    object-position: top;
     width: 100%;
 
     @include onTablet {
@@ -87,7 +75,7 @@
 
   .swiper-pagination {
     position: absolute;
-    bottom: 10px;
+    bottom: 0;
     width: 100%;
     height: 10px;
     text-align: center;
@@ -107,9 +95,4 @@
     background-color: $secondary-bg-color;
     opacity: 1;
   }
-
-  // .swiper {
-  //   margin-left: auto;
-  //   margin-right: auto;
-  // }
 }
