--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,6 +17,242 @@ h1 {
   min-Height: 100vh;
 }
 
+img:hover {
+  cursor: pointer;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  /* Set your default link color */
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+  /* Add a smooth transition effect for color changes */
+}
+
+a:hover {
+  color: #007bff;
+  /* Change the color on hover, adjust to your preferred hover color */
+}
+
+img {
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+img:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+.modal_worktime {
+  color: #FFF;
+  width: 170px;
+  font-family: IBM Plex Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  margin-top: 20px;
+}
+
+.modal--navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.menu-cross {
+  position: absolute;
+  width: 12.728px;
+  height: 12.728px;
+  top: 18%;
+  left: 4.5%;
+}
+
+.modal {
+  color: #FFF;
+  font-family: "IBM Plex Sans";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 233px;
+  background: #1A5A4C;
+  z-index: 9999;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+  /* Add transition property */
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  pointer-events: none;
+  /* Prevent interaction with hidden modal */
+}
+
+.modal.show {
+  opacity: 1;
+  /* Make the modal visible */
+  pointer-events: auto;
+  /* Enable interaction when visible */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  overflow: hidden;
+}
+
+.modal_worktime2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 170px;
+  margin-top: 68px;
+  margin-left: 30px;
+  color: #FFF;
+  font-family: "IBM Plex Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
+  /* 21px */
+}
+
+.modal_content-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  width: 169px;
+}
+
+.modal-line {
+  width: 1px;
+  margin-top: 35px;
+  height: 135px;
+  background: rgba(255, 255, 255, 0.5);
+  margin-left: 102px;
+  margin-right: 102px;
+}
+
+.modal__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  list-style: none;
+  border-radius: 5px;
+  color: #FFF;
+  font-family: "IBM Plex Sans";
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 2px;
+  margin-left: 78px;
+}
+
+.modal__content li {
+  color: #FFF;
+  margin: 16px 0px 16px 0px;
+}
+
+.modal__content li a {
+  color: #FFF;
+  text-decoration: none;
+  font-size: 22px;
+  color: #FFF;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  /* 22px */
+}
+
+.modal__content li a:hover {
+  text-decoration: underline;
+  text-underline-offset: 8px;
+}
+
+.menu-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.modal__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  list-style: none;
+  border-radius: 5px;
+  color: #FFF;
+  font-family: "IBM Plex Sans";
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 2px;
+  margin-left: 78px;
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -131,6 +367,8 @@ h1 {
 
 .header_tickets-text {
   color: #0F0E08;
+  border: none;
+  background: none;
   font-family: IBM Plex Sans;
   font-size: 16px;
   font-style: normal;
@@ -479,20 +717,17 @@ h1 {
 }
 
 .footer_subscribe-textarea {
-  width: 470px;
-  height: 64px;
-  background: #FFF;
-  text-align: center;
-  /* Center horizontally */
-  line-height: 63px;
-  /* Equal to the height for vertical centering */
   resize: none;
+  background: #fff;
+  width: 447px;
+  height: 64px;
   margin-right: 30px;
+  line-height: 63px;
+  padding-left: 32px;
+  /* Add desired padding here */
 }
 
 .footer_subscribe-textarea::-webkit-input-placeholder {
-  text-align: left;
-  padding-left: 32px;
   color: #687480;
   font-family: Montserrat;
   font-size: 14px;
@@ -501,8 +736,6 @@ h1 {
 }
 
 .footer_subscribe-textarea:-ms-input-placeholder {
-  text-align: left;
-  padding-left: 32px;
   color: #687480;
   font-family: Montserrat;
   font-size: 14px;
@@ -511,8 +744,6 @@ h1 {
 }
 
 .footer_subscribe-textarea::-ms-input-placeholder {
-  text-align: left;
-  padding-left: 32px;
   color: #687480;
   font-family: Montserrat;
   font-size: 14px;
@@ -521,13 +752,27 @@ h1 {
 }
 
 .footer_subscribe-textarea::placeholder {
-  text-align: left;
-  padding-left: 32px;
   color: #687480;
   font-family: Montserrat;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
+}
+
+.footer_subscribe-textarea:focus::-webkit-input-placeholder {
+  visibility: hidden;
+}
+
+.footer_subscribe-textarea:focus:-ms-input-placeholder {
+  visibility: hidden;
+}
+
+.footer_subscribe-textarea:focus::-ms-input-placeholder {
+  visibility: hidden;
+}
+
+.footer_subscribe-textarea:focus::placeholder {
+  visibility: hidden;
 }
 
 .footer_subscribe-button {
@@ -593,6 +838,8 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-family: 'IBM Plex Sans' , 'sans-serif';
+  font-size: 14px;
 }
 
 .footer_worktime-titles {
@@ -675,6 +922,26 @@ h1 {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
+  .modal-line {
+    height: 134px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 40px;
+  }
+  .modal__content {
+    margin-left: 31px;
+    margin-right: 31px;
+  }
+  .modal_content-div {
+    width: auto;
+  }
+  .modal_worktime {
+    margin-left: 31px;
+    margin-top: 25px;
+  }
+  .modal_worktime2 {
+    margin-top: 73px;
+  }
   .header_logo {
     margin-left: 34px;
     margin-top: 39px;
@@ -877,6 +1144,37 @@ h1 {
 }
 
 @media screen and (min-width: 0px) and (max-width: 767px) {
+  .modal-line {
+    width: 90%;
+    margin: 0 auto;
+    height: 1px;
+  }
+  .modal.show {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    height: auto;
+    padding-bottom: 27px;
+  }
+  .menu-cross {
+    top: 9%;
+    left: 8%;
+  }
+  .modal_content-div {
+    width: 120px;
+  }
+  .modal__content {
+    margin-left: 20px;
+  }
+  .modal_worktime2 {
+    width: 280px;
+    margin-top: 16px;
+  }
+  .modal_worktime {
+    margin-left: 30px;
+  }
   .header {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
