--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,66 @@
 h1 {
   @extend %h1;
+  
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 45px;
+
+  @include on-tablet {
+    text-align: left;
+    font-size: 54px;
+    line-height: 65px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+    line-height: 86px;
+  }
 }
+
+h2 {
+  @extend %h1;
+
+  font-size: 36px;
+  line-height: 36px;
+  text-align: center;
+
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 48px;
+    text-align: left;
+  }
+ }
+
+ h3 {
+  @extend %h2;
+
+    font-size: 28px;
+    line-height: 28px;
+
+    @include on-tablet {
+      font-size: 36px;
+      line-height: 36px;
+    }
+ }
+
+ h4 {
+  @extend %h4;
+
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+
+  @include on-tablet {
+    font-size: 14px;
+    line-height: 14px;
+  }
+ }
+
+p {
+  @extend %p;
+ }
+
+a {
+  @extend %a;
+ }
