add task solution

--- a/src/styles/blocks/_lection.scss
+++ b/src/styles/blocks/_lection.scss
@@ -11,6 +11,7 @@
       height: 390px;
       width: 700px;
     }
+
     @include on-desktop {
       height: 550px;
       width: 100vw;
@@ -25,20 +26,19 @@
     margin: auto;
     height: 140px;
     width: 280px;
-
+    
     background-color: #fff;
-    box-shadow: 0px 2px 0px 0px #1A5A4C40;
+    box-shadow: 0 2px 0 0 #1A5A4C40;
     position: relative;
     transform: translateY(-57px);
-
 
     @include on-tablet {
       height: 204px;
       width: 570px;
       padding: 50px 100px;
       transform: translateY(-84px);
-
     }
+
     @include on-desktop {
       transform: translateY(-102px);
     }
