--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -6,12 +6,14 @@
   @include on-tablet {
     padding-top: 51px;
   }
+
   @include on-desktop {
     padding-top: 47px;
   }
 
   &__container {
     @include page-grid;
+
     gap: 40px;
   }
 
@@ -41,6 +43,7 @@
     @include on-tablet {
       gap: 32px;
     }
+
     @include on-desktop {
       justify-content: space-between;
     }
@@ -50,6 +53,7 @@
     @include on-tablet {
       grid-column: 2/-4;
     }
+    
     @include on-desktop {
       grid-column: 3/5;
     }
@@ -62,6 +66,7 @@
     @include on-tablet {
       grid-column: 4/6;
     }
+
     @include on-desktop {
       grid-column: 5/7;
     }
@@ -82,11 +87,11 @@
     grid-row-start: 4;
     grid-column: 1/-1;
 
-
     @include on-tablet {
       grid-row-start: 3;
       grid-column: 2/-2;
     }
+
     @include on-desktop {
       grid-row-start: 1;
       grid-column: 8/12;
@@ -145,16 +150,13 @@
       grid-column: 2/-2;
 
       padding-top: 0;
-
-
       border-bottom: 1px solid $green-bg-color;
       justify-self: center;
-
     }
+
     @include on-desktop {
       grid-row-start: 1;
       grid-column: 7/8;
-
 
       border-left: 1px solid $green-bg-color;
       justify-self: center;
@@ -173,10 +175,11 @@
       }
     }
   }
+
   &__copyright {
     @include page-grid;
 
-    padding: 60px 0 30px 0;
+    padding: 60px 0 30px;
     color: $copyright-text;
     font-family: $second-font;
     font-size: 12px;
@@ -192,10 +195,11 @@
     }
 
     @include on-tablet {
-      padding: 100px 0 36px 0;
+      padding: 100px 0 36px;
     }
+
     @include on-desktop {
-      padding: 87px 0 55px 0;
+      padding: 87px 0 55px;
     }
 
     &-symbol {
@@ -213,6 +217,7 @@
         grid-column: -3/-1;
         text-align: end;
       }
+
       @include on-desktop {
         grid-column: -3/-1;
       }
