--- a/src/styles/blocks/_top-bar.scss
+++ b/src/styles/blocks/_top-bar.scss
@@ -3,12 +3,14 @@
     height: 61px;
 
     @include on-tablet {
+      padding-inline: 82px;
       height: 72px;
-      width: 220px;
+
     }
   }
 
   &__logo-link {
+    justify-content: center;
     grid-column-start: 2;
     translate: -40px 0;
 
