--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,12 +23,12 @@ a:hover{
 
 a {
   text-decoration: none;
-  color: inherit; /* Set your default link color */
-  transition: color 0.3s; /* Add a smooth transition effect for color changes */
+  color: inherit;
+  transition: color 0.3s;
 }
 
 a:hover {
-  color: #007bff; /* Change the color on hover, adjust to your preferred hover color */
+  color: #007bff;
 }
 
 
@@ -76,9 +76,9 @@ left: 4.5%;
   background: #1A5A4C;
   z-index: 9999;
   opacity: 0;
-  transition: opacity 0.3s ease-in-out; /* Add transition property */
+  transition: opacity 0.3s ease-in-out;
   box-sizing: border-box;
-  pointer-events: none; /* Prevent interaction with hidden modal */
+  pointer-events: none;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -87,8 +87,8 @@ left: 4.5%;
 }
 
 .modal.show {
-  opacity: 1; /* Make the modal visible */
-  pointer-events: auto; /* Enable interaction when visible */
+  opacity: 1;
+  pointer-events: auto;
 
 
 }
@@ -198,18 +198,18 @@ line-height: 100%; /* 22px */
 }
 
 .header_first-block {
-  width: 100%; /* Note: You have two height properties, you may want to remove one depending on your design */
+  width: 100%;
   position: relative;
 }
 
 .header_second-block {
   background-image: url(../images/header-image.jpg);
   height: 700px;
-  width: 100%; /* Set width to 100% to stretch across the entire width of the page */
+  width: 100%;
   background-repeat: no-repeat;
-  background-size: cover; /* Adjust to cover the entire container while maintaining aspect ratio */
-  background-position: center center; /* Center the image both horizontally and vertically */
-  transform: scaleX(-1); /* Flip the element horizontally */
+  background-size: cover;
+  background-position: center center;
+  transform: scaleX(-1);
   align-items:flex-end;
   overflow: hidden;
 }
@@ -226,14 +226,14 @@ font-family: Montserrat;
 font-size: 72px;
 font-style: normal;
 font-weight: 700;
-line-height: 120%; /* 86.4px */
+line-height: 120%;
 margin-top: 154px;
 margin-bottom: 89px;
 margin-left: 55px;
 }
 
 .header_second-name{
-  transform: scaleX(-1); /* Flip the element horizontally */
+  transform: scaleX(-1);
 display:flex;
 margin-left: -55px;
 margin-top: 15px;
@@ -245,7 +245,7 @@ font-family: Montserrat;
 font-size: 36px;
 font-style: normal;
 font-weight: 700;
-line-height: 100%; /* 36px */
+line-height: 100%;
 color: #0F0E08;
 position: relative;
 
@@ -254,7 +254,7 @@ font-family: Montserrat;
 font-size: 36px;
 font-style: normal;
 font-weight: 700;
-line-height: 100%; /* 36px */
+line-height: 100%;
 }
 
 .header_tickets-wrapper{
@@ -283,7 +283,7 @@ font-family: IBM Plex Sans;
 font-size: 16px;
 font-style: normal;
 font-weight: 500;
-line-height: 100%; /* 16px */
+line-height: 100%;
 }
 
 .header_tickets div{
@@ -302,7 +302,7 @@ height: 100%;
   background-image: url(../images/chevron-right.svg);
   background-repeat: no-repeat;
   background-color: #1A5A4C;
-  background-size: 24px 24px; /* width height */
+  background-size: 24px 24px;
   background-position: center;
 }
 
@@ -313,9 +313,9 @@ height: 100%;
 display: flex;
 align-items: center;
 transform: rotate(-90deg);
-  transform-origin: left bottom; /* Определение точки вращения (левый нижний угол) */
-  position: absolute; /* Позиционирование внутреннего блока относительно родителя */
-  bottom: 0px; /* Размещение блока внизу */
+  transform-origin: left bottom;
+  position: absolute;
+  bottom: 0px;
   margin-left: 55px;
 }
 
@@ -360,7 +360,7 @@ font-family: IBM Plex Sans;
 font-size: 14px;
 font-style: normal;
 font-weight: 700;
-line-height: 100%; /* 14px */
+line-height: 100%;
 }
 
 .main_event{
@@ -425,7 +425,7 @@ font-family: IBM Plex Sans;
 font-size: 14px;
 font-style: normal;
 font-weight: 500;
-line-height: 100%; /* 14px */
+line-height: 100%;
 margin-right: 210px;
 }
 
@@ -436,7 +436,7 @@ font-family: Montserrat;
 font-size: 36px;
 font-style: normal;
 font-weight: 400;
-line-height: 100%; /* 36px */
+line-height: 100%;
 margin-left: 102px;
 }
 
@@ -447,7 +447,7 @@ font-family: Montserrat;
 font-size: 48px;
 font-style: normal;
 font-weight: 700;
-line-height: 100%; /* 48px */
+line-height: 100%;
 margin-left: 55px;
 margin-top: 200px;
 }
@@ -464,7 +464,7 @@ height: 15px;
 font-size: 14px;
 font-style: normal;
 font-weight: 700;
-line-height: 150%; /* 21px */
+line-height: 150%;
 }
 
 .main_event1-image{
@@ -481,7 +481,7 @@ font-style: normal;
 font-weight: 500;
 width: 170px;
 height: 15px;
-line-height: 100%; /* 14px */
+line-height: 100%;
 }
 
 .main_event-wrapper2{
@@ -507,7 +507,7 @@ font-family: IBM Plex Sans;
 font-size: 16px;
 font-style: normal;
 font-weight: 300;
-line-height: 150%; /* 24px */
+line-height: 150%;
 }
 
 .main_event_div{
@@ -521,7 +521,7 @@ font-family: Montserrat;
 font-size: 36px;
 font-style: normal;
 font-weight: 400;
-line-height: 100%; /* 36px */
+line-height: 100%;
 }
 
 .subscribe{
@@ -548,7 +548,7 @@ font-family: Montserrat;
 font-size: 48px;
 font-style: normal;
 font-weight: 700;
-line-height: 100%; /* 48px */
+line-height: 100%;
 margin-bottom: 0px;
 }
 
@@ -559,7 +559,7 @@ margin-bottom: 0px;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 100%; /* 18px */
+  line-height: 100%;
 }
 .footer_subscribe-textarea {
   resize: none;
@@ -568,7 +568,7 @@ margin-bottom: 0px;
   height: 64px;
   margin-right: 30px;
   line-height: 63px;
-  padding-left: 32px; /* Add desired padding here */
+  padding-left: 32px;
 }
 
 .footer_subscribe-textarea::placeholder {
@@ -707,7 +707,7 @@ font-family: "IBM Plex Sans";
 font-size: 12px;
 font-style: normal;
 font-weight: 300;
-line-height: 140.625%; /* 16.875px */
+line-height: 140.625%;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px){
@@ -862,8 +862,8 @@ min-height: auto;
 
   @media screen and (min-width: 768px) and (max-width: 1279px) {
     .main_event1-image {
-        width: 100%; /* 70% от ширины viewport */
-        max-width: 700px; /* Максимальная ширина в пикселях, чтобы избежать слишком больших изображений */
+        width: 100%;
+        max-width: 700px;
     }
 }
 
@@ -1053,7 +1053,7 @@ font-family: Montserrat;
 font-size: 28px;
 font-style: normal;
 font-weight: 400;
-line-height: 100%; /* 28px */
+line-height: 100%;
 margin-left: 0px;
   }
 
