--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -162,8 +162,7 @@ line-height: 100%; /* 22px */
 }
 
 .modal__content li a:hover {
-  text-decoration: underline;
-  text-underline-offset: 8px;
+  color: black;
 }
 
 .menu-group {
