--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,21 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./blocks/page";
+@import "./blocks/header";
+@import "./blocks/button";
+@import "./blocks/menu";
+@import "./blocks/nav";
+@import "./blocks/schedule";
+@import "./blocks/main";
+@import "./blocks/section-title";
+@import "./blocks/current-events";
+@import "./blocks/block";
+@import "./blocks/subscription";
+@import "./blocks/gallery";
+@import "./blocks/slider";
+@import "./blocks/footer";
+@import "./blocks/go-back";
 
-body {
-  background: $c-gray;
-}
+
+
