--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,14 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/reset.scss";
+@import "./blocks/page.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/header.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/gallary.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/fooret.scss";
