--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -12,9 +12,8 @@
   }
 
   &__menu {
-    padding-inline: 55px;
-
-
+    @include content-padding-in-line;
+    
     position: fixed;
     top: 0;
     left: 0;
