--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -12,8 +12,8 @@
   }
 
   &__menu {
-    @include content-padding-in-line;
-    
+    padding-inline: 20px;
+
     position: fixed;
     top: 0;
     left: 0;
@@ -37,10 +37,14 @@
 
     @include on-tablet {
       height: 225px;
+    padding-inline: 39px;
+
     }
 
     @include on-desktop {
       height: 233px;
+    padding-inline: 55px;
+
     }
   }
 }
