--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,5 +1,7 @@
 .menu {
   &__container {
+    @include content-padding-in-line;
+    
     padding-top: 27px;
     display: grid;
     row-gap: 24px;
@@ -15,6 +17,8 @@
       display: flex;
       justify-content: space-between;
       gap: 102px;
+      max-width: 1280px;
+      margin-inline: auto;
 
       padding-top: 40px;
     }
