--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,16 +1,15 @@
 .container {
-  display: block;
   width: 320px;
   margin: 0 auto;
   position: relative;
   padding: 0 20px;
 
-  @include onTablet {
+  @include on-tablet {
     width: 768px;
     padding: 0 40px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     width: 1280px;
     padding: 0 55px;
   }
