--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,19 +1,19 @@
 .events {
   margin-bottom: 60px;
 
-  @include onTablet {
+  @include on-tablet {
     margin-bottom: 105px;
   }
 
   &__title {
     color: #0F0E08;
-    font-family: 'Montserrat';
+    font-family: Montserrat, sans-serif;
     font-size: 48px;
     font-weight: 700;
     margin-bottom: 40px;
     text-align: center;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 55px;
       text-align-last: left;
     }
@@ -23,7 +23,7 @@
     width: 100%;
     margin-bottom: 44px;
 
-    @include onDesktop {
+    @include on-desktop {
       margin-bottom: 0;
     }
   }
@@ -31,11 +31,11 @@
   &__wrap {
     margin-bottom: 60px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 105px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       display: flex;
       justify-content: space-between;
       gap: 130px;
@@ -46,7 +46,7 @@
       align-items: center;
       justify-content: space-between;
 
-      @include onTablet {
+      @include on-tablet {
         margin-bottom: 32px;
         gap: 20px;
       }
@@ -57,14 +57,14 @@
     width: 100%;
     &__name {
       color: #687480;
-      font-family: "IBM Plex Sans";
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 500;
     }
 
     &__time {
       color: $green;
-      font-family: "IBM Plex Sans";
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 700;
     }
@@ -72,12 +72,12 @@
     &__title {
       position: relative;
       color: #0F0E08;
-      font-family: "Montserrat";
+      font-family: Montserrat, sans-serif;
       font-size: 28px;
       font-weight: 400;
       margin-bottom: 10px;
 
-      @include onTablet {
+      @include on-tablet {
         width: 360px;
         font-size: 36px;
         margin-bottom: 15px;
@@ -97,15 +97,14 @@
 
     &__text {
       color: #4E4E4E;
-      font-family: "IBM Plex Sans";
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       font-style: normal;
       font-weight: 300;
       line-height: 150%;
 
-      @include onTablet {
+      @include on-tablet {
         width: 360px;
-
       }
     }
   }
