--- a/src/styles/blocks/gallary.scss
+++ b/src/styles/blocks/gallary.scss
@@ -18,20 +18,20 @@
 .gallary {
   margin-bottom: 100px;
 
-  @include onDesktop {
+  @include on-desktop {
     margin-bottom: 200px;
   }
 
   &__title {
     text-align: center;
     color: #0F0E08;
-    font-family: "Montserrat";
+    font-family: Montserrat, sans-serif;
     font-size: 48px;
     font-weight: 700;
     line-height: 100%;
     margin-bottom: 40px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 55px;
       text-align-last: left;
     }
@@ -41,7 +41,7 @@
     display: block;
     margin: 0 auto;
 
-    @include onDesktop {
+    @include on-desktop {
       display: none;
     }
   }
@@ -55,7 +55,7 @@
       margin-bottom: 0;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       display: grid;
     }
   }
@@ -65,18 +65,18 @@
     display: block;
     margin: 0 auto;
 
-    @include onTablet {
+    @include on-tablet {
       width: 340px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 100%;
       transition-duration: 1s;
 
       &:hover {
         transform: scale(1.1);
         opacity: 1;
-        background: #EEEEEE;
+        background: #EEE;
         border-radius: 10px;
         z-index: 10;
       }
