--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -1,19 +1,19 @@
 .lecture {
   position: relative;
   height: 210px;
-  background: url('../images/Rectangle20.jpg') top / cover no-repeat;
+  background: url('../images/Rectangle20.jpg') center / cover no-repeat;
   display: flex;
   align-items: end;
   margin-bottom: 183px;
   padding-top: 153px;
 
-  @include onTablet {
+  @include on-tablet {
     height: 390px;
     padding-top: 300px;
     margin-bottom: 208px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     height: 650px;
     padding-top: 448px;
     margin-bottom: 302px;
@@ -27,16 +27,16 @@
     width: 280px;
     height: 140px;
     background: #FFF;
-    box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
     padding: 24px 0 20px;
 
-    @include onTablet {
+    @include on-tablet {
       width: 570px;
       height: 204px;
       padding: 45px 100px 50px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       bottom: -100px;
     }
 
@@ -48,14 +48,14 @@
       align-items: center;
       margin-bottom: 24px;
 
-      @include onTablet {
+      @include on-tablet {
         justify-content: space-between;
       }
     }
 
     &__name {
       color: #687480;
-      font-family: "IBM Plex Sans";
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 500;
       line-height: 100%;
@@ -63,7 +63,7 @@
 
     &__time {
       color: $green;
-      font-family: "IBM Plex Sans";
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 700;
       line-height: 150%;
@@ -71,13 +71,13 @@
 
     &__title {
       color: #0F0E08;
-      font-family: 'Montserrat';
+      font-family: Montserrat, sans-serif;
       font-size: 28px;
       font-weight: 400;
       line-height: 100%;
       text-align: center;
 
-      @include onTablet {
+      @include on-tablet {
         text-align: left;
         font-size: 36px;
       }
