--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -4,7 +4,7 @@
   margin-bottom: 50px;
   padding-top: 88px;
 
-  @include onDesktop {
+  @include on-desktop {
     padding-top: 163px;
     height: 550px;
   }
@@ -12,13 +12,13 @@
   &__title {
     color: #FFF;
     text-align: center;
-    font-family: "Montserrat";
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 100%;
     margin-bottom: 20px;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 48px;
     }
   }
@@ -26,13 +26,13 @@
   &__subtitle {
     color: #FFF;
     text-align: center;
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 100%;
     margin-bottom: 50px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 72px;
     }
   }
@@ -41,7 +41,7 @@
     display: flex;
     justify-content: center;
 
-    @include onTablet {
+    @include on-tablet {
       gap: 30px;
     }
 
@@ -53,17 +53,17 @@
       padding-left: 30px;
 
       color: #687480;
-      font-family: "Montserrat";
+      font-family: Montserrat, sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 100%;
 
-      @include onTablet {
+      @include on-tablet {
         width: 374px;
         height: 70px;
       }
 
-      @include onDesktop {
+      @include on-desktop {
         width: 470px;
       }
     }
@@ -76,20 +76,9 @@
       border: none;
       cursor: pointer;
 
-      @include onTablet {
+      @include on-tablet {
         width: 70px;
       height: 70px;
-      }
-
-      &::before {
-        content: '';
-        position: absolute;
-        width: 24px;
-        height: 24px;
-        background: url('../icons/right.svg') center center no-repeat;
-        background-size: cover;
-        /* Змінено на цей рядок */
-        z-index: 10;
       }
     }
   }
