--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,14 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-@import "./blocks/container.scss";
-@import "./blocks/grid.scss";
-@import "./blocks/reset.scss";
-@import "./blocks/page.scss";
-@import "./blocks/menu.scss";
-@import "./blocks/header.scss";
-@import "./blocks/events.scss";
-@import "./blocks/lecture.scss";
-@import "./blocks/gallary.scss";
-@import "./blocks/subscribe.scss";
-@import "./blocks/fooret.scss";
+@import "./blocks/container";
+@import "./blocks/grid";
+@import "./blocks/reset";
+@import "./blocks/page";
+@import "./blocks/menu";
+@import "./blocks/header";
+@import "./blocks/events";
+@import "./blocks/lecture";
+@import "./blocks/gallary";
+@import "./blocks/subscribe";
+@import "./blocks/fooret";
