--- a/src/styles/blocks/fooret.scss
+++ b/src/styles/blocks/fooret.scss
@@ -1,20 +1,19 @@
 .footer {
   height: 930px;
 
-  @include onTablet {
+  @include on-tablet {
     height: 650px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     height: 350px;
   }
 
   &__logo {
     display: flex;
     justify-content: center;
-    margin-bottom: 54px;
 
-    @include onTablet {
+    @include on-tablet {
       justify-content: start;
       margin-bottom: 62px;
     }
@@ -27,22 +26,27 @@
 
   &__title {
     color: #0F0E08;
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
+
+    &:hover {
+      color: #0F0E08;
+    }
   }
 
   &__span {
     width: 280px;
     height: 1px;
     background: rgba(26, 90, 76, 0.50);
-    margin-bottom: 65px;
-    
-    @include onTablet {
+    margin-bottom: 40px;
+
+    @include on-tablet {
       width: 460px;
+      margin-bottom: 65px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 1px;
       height: 260px;
       margin: 0 auto;
@@ -56,14 +60,25 @@
     gap: 20px;
     margin-bottom: 64px;
 
-    @include onDesktop {
+    @include on-desktop {
       margin-bottom: 0;
+    }
+
+    &-icons {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 54px;
+
+      @include on-tablet {
+        display: block;
+      }
     }
   }
 
   &__text {
     color: #0F0E08;
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
