--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -1,15 +1,15 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 20px;
+  column-gap: 10px;
   margin: 0 auto;
 
-  @include onTablet {
+  @include on-tablet {
     grid-template-columns: repeat(6, 1fr);
     column-gap: 30px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     grid-template-columns: repeat(12, 1fr);
     column-gap: 24px;
   }
@@ -17,7 +17,7 @@
   &--tablet {
     display: block;
 
-    @include onDesktop {
+    @include on-desktop {
       display: grid;
     }
   }
@@ -25,7 +25,7 @@
   &--desktop {
     display: block;
 
-    @include onDesktop {
+    @include on-desktop {
       display: grid;
     }
   }
@@ -34,26 +34,26 @@
     @for $start from 1 through 2 {
       @for $end from $start through 2 {
         &--#{$start}-#{$end} {
-          grid-column: #{$start} / #{$end + 1};
+          grid-column: #{$start} / #{$end + 1} ;
         }
       }
     }
 
-    @include onTablet {
+    @include on-tablet {
       @for $start from 1 through 6 {
         @for $end from $start through 6 {
           &--tablet-#{$start}-#{$end} {
-            grid-column: #{$start} / #{$end + 1};
+            grid-column: #{$start} / #{$end + 1} ;
           }
         }
       }
     }
 
-    @include onDesktop {
+    @include on-desktop {
       @for $start from 1 through 12 {
         @for $end from $start through 12 {
           &--desktop-#{$start}-#{$end} {
-            grid-column: #{$start} / #{$end + 1};
+            grid-column: #{$start} / #{$end + 1} ;
           }
         }
       }
