--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,13 +3,13 @@
   position: relative;
   margin-bottom: 70px;
 
-  @include onTablet {
+  @include on-tablet {
     height: 384px;
     padding-top: 0;
     margin-bottom: 88px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     height: 665px;
     margin-bottom: 200px;
     padding-top: 0;
@@ -19,12 +19,12 @@
     width: 100%;
     padding-top: 320px;
 
-    @include onTablet {
+    @include on-tablet {
       padding-top: 127px;
       height: 384px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       padding-top: 320px;
       height: 665px;
     }
@@ -39,7 +39,7 @@
     width: 320px;
     height: 300px;
 
-    @include onTablet {
+    @include on-tablet {
       padding: 11px 0 0 55px;
       left: auto;
       right: 0;
@@ -47,7 +47,7 @@
       height: 384px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 645px;
       height: 100%;
     }
@@ -57,7 +57,7 @@
     display: block;
     margin: 0 auto;
 
-    @include onTablet {
+    @include on-tablet {
       margin: 0;
     }
   }
@@ -67,30 +67,30 @@
     z-index: 3;
     top: 11px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 64px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-bottom: 143px;
     }
   }
 
   &__title {
     color: #000;
-    font-family: "Montserrat";
+    font-family: Montserrat, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 45px;
     text-align: center;
     margin-bottom: 20px;
 
-    @include onTablet {
+    @include on-tablet {
       text-align: left;
       margin-bottom: 40px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       font-size: 64px;
       margin-bottom: 90px;
     }
@@ -99,7 +99,7 @@
   &__tickets {
     display: flex;
 
-    @include onDesktop {
+    @include on-desktop {
       justify-content: end;
       align-items: end;
     }
@@ -116,7 +116,7 @@
       background: #fff;
       z-index: 0;
 
-      @include onTablet {
+      @include on-tablet {
         width: 270px;
         height: 70px;
       }
@@ -129,7 +129,7 @@
         height: 50px;
         background: $green;
 
-        @include onTablet {
+        @include on-tablet {
           width: 70px;
           height: 70px;
         }
@@ -138,7 +138,7 @@
 
     &__text {
       color: #0F0E08;
-      font-family: "IBM Plex Sans";
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       font-weight: 500;
       line-height: 100%;
@@ -158,7 +158,7 @@
     bottom: 0;
 
     color: #687480;
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 700;
 
@@ -178,9 +178,7 @@
       background: $green;
     }
 
-    @include onTablet {}
-
-    @include onDesktop {
+    @include on-desktop {
       display: block;
     }
   }
