--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,5 @@
 .page {
-  font-family: 'IBM Plex Sans', sans-serif;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'IBM Plex Sans', Montserrat, sans-serif;
   scroll-behavior: smooth;
 
   &__body {
