--- a/src/styles/blocks/_lection.scss
+++ b/src/styles/blocks/_lection.scss
@@ -4,7 +4,7 @@
     background-size: cover;
     background-position: center;
     height: 210px;
-    width: 100vw;
+    width: 100%;
     z-index: -1;
 
     @include on-tablet {
@@ -26,7 +26,7 @@
     margin: auto;
     height: 140px;
     width: 280px;
-    
+
     background-color: #fff;
     box-shadow: 0 2px 0 0 #1A5A4C40;
     position: relative;
