--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -588,6 +588,7 @@ height: 70px;
 background: #F14A27;
 color: black;
 border: none;
+margin-left: 1px;
 }
 
 .footer_subscribe-wrapper{
@@ -708,6 +709,19 @@ font-style: normal;
 font-weight: 300;
 line-height: 140.625%;
 }
+
+.header_tickets:hover {
+    cursor: pointer;
+  }
+
+  /* Style the button to your preference */
+  .header_tickets-text {
+    padding: 8px 16px;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
 
 @media screen and (min-width: 768px) and (max-width: 1279px){
 
