--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;600;700&family=Montserrat:wght@500;700&display=swap");
 h1 {
   font-family: "Roboto", sans-serif;
@@ -32,15 +31,12 @@ a:hover {
 a {
   text-decoration: none;
   color: inherit;
-  /* Set your default link color */
   -webkit-transition: color 0.3s;
   transition: color 0.3s;
-  /* Add a smooth transition effect for color changes */
 }
 
 a:hover {
   color: #007bff;
-  /* Change the color on hover, adjust to your preferred hover color */
 }
 
 img {
@@ -96,18 +92,9 @@ img:hover {
   opacity: 0;
   -webkit-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
-  /* Add transition property */
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   pointer-events: none;
-  /* Prevent interaction with hidden modal */
-}
-
-.modal.show {
-  opacity: 1;
-  /* Make the modal visible */
-  pointer-events: auto;
-  /* Enable interaction when visible */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -122,6 +109,11 @@ img:hover {
       -ms-flex-align: start;
           align-items: start;
   overflow: hidden;
+}
+
+.modal.show {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .modal_worktime2 {
@@ -210,8 +202,7 @@ img:hover {
 }
 
 .modal__content li a:hover {
-  text-decoration: underline;
-  text-underline-offset: 8px;
+  color: black;
 }
 
 .menu-group {
@@ -264,7 +255,6 @@ img:hover {
 
 .header_first-block {
   width: 100%;
-  /* Note: You have two height properties, you may want to remove one depending on your design */
   position: relative;
 }
 
@@ -272,15 +262,11 @@ img:hover {
   background-image: url(../images/header-image.jpg);
   height: 700px;
   width: 100%;
-  /* Set width to 100% to stretch across the entire width of the page */
   background-repeat: no-repeat;
   background-size: cover;
-  /* Adjust to cover the entire container while maintaining aspect ratio */
   background-position: center center;
-  /* Center the image both horizontally and vertically */
   -webkit-transform: scaleX(-1);
           transform: scaleX(-1);
-  /* Flip the element horizontally */
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
@@ -300,7 +286,6 @@ img:hover {
   font-style: normal;
   font-weight: 700;
   line-height: 120%;
-  /* 86.4px */
   margin-top: 154px;
   margin-bottom: 89px;
   margin-left: 55px;
@@ -309,7 +294,6 @@ img:hover {
 .header_second-name {
   -webkit-transform: scaleX(-1);
           transform: scaleX(-1);
-  /* Flip the element horizontally */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -324,7 +308,6 @@ img:hover {
   font-style: normal;
   font-weight: 700;
   line-height: 100%;
-  /* 36px */
   color: #0F0E08;
   position: relative;
   text-align: center;
@@ -333,7 +316,6 @@ img:hover {
   font-style: normal;
   font-weight: 700;
   line-height: 100%;
-  /* 36px */
 }
 
 .header_tickets-wrapper {
@@ -374,7 +356,6 @@ img:hover {
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
-  /* 16px */
 }
 
 .header_tickets div {
@@ -398,7 +379,6 @@ img:hover {
   background-repeat: no-repeat;
   background-color: #1A5A4C;
   background-size: 24px 24px;
-  /* width height */
   background-position: center;
 }
 
@@ -413,11 +393,8 @@ img:hover {
           transform: rotate(-90deg);
   -webkit-transform-origin: left bottom;
           transform-origin: left bottom;
-  /* Определение точки вращения (левый нижний угол) */
   position: absolute;
-  /* Позиционирование внутреннего блока относительно родителя */
   bottom: 0px;
-  /* Размещение блока внизу */
   margin-left: 55px;
 }
 
@@ -470,7 +447,6 @@ img:hover {
   font-style: normal;
   font-weight: 700;
   line-height: 100%;
-  /* 14px */
 }
 
 .main_event {
@@ -552,7 +528,6 @@ img:hover {
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
-  /* 14px */
   margin-right: 210px;
 }
 
@@ -563,7 +538,6 @@ img:hover {
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
-  /* 36px */
   margin-left: 102px;
 }
 
@@ -574,7 +548,6 @@ img:hover {
   font-style: normal;
   font-weight: 700;
   line-height: 100%;
-  /* 48px */
   margin-left: 55px;
   margin-top: 200px;
 }
@@ -596,7 +569,6 @@ img:hover {
   font-style: normal;
   font-weight: 700;
   line-height: 150%;
-  /* 21px */
 }
 
 .main_event1-image {
@@ -613,7 +585,6 @@ img:hover {
   width: 170px;
   height: 15px;
   line-height: 100%;
-  /* 14px */
 }
 
 .main_event-wrapper2 {
@@ -648,7 +619,6 @@ img:hover {
   font-style: normal;
   font-weight: 300;
   line-height: 150%;
-  /* 24px */
 }
 
 .main_event_div {
@@ -667,7 +637,6 @@ img:hover {
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
-  /* 36px */
 }
 
 .subscribe {
@@ -701,7 +670,6 @@ img:hover {
   font-style: normal;
   font-weight: 700;
   line-height: 100%;
-  /* 48px */
   margin-bottom: 0px;
 }
 
@@ -713,7 +681,6 @@ img:hover {
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
-  /* 18px */
 }
 
 .footer_subscribe-textarea {
@@ -724,7 +691,6 @@ img:hover {
   margin-right: 30px;
   line-height: 63px;
   padding-left: 32px;
-  /* Add desired padding here */
 }
 
 .footer_subscribe-textarea::-webkit-input-placeholder {
@@ -781,6 +747,7 @@ img:hover {
   background: #F14A27;
   color: black;
   border: none;
+  margin-left: 1px;
 }
 
 .footer_subscribe-wrapper {
@@ -918,7 +885,19 @@ img:hover {
   font-style: normal;
   font-weight: 300;
   line-height: 140.625%;
-  /* 16.875px */
+}
+
+.header_tickets:hover {
+  cursor: pointer;
+}
+
+/* Style the button to your preference */
+.header_tickets-text {
+  padding: 8px 16px;
+  color: black;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
@@ -1074,9 +1053,7 @@ img:hover {
 @media screen and (min-width: 768px) and (max-width: 1279px) and (min-width: 768px) and (max-width: 1279px) {
   .main_event1-image {
     width: 100%;
-    /* 70% от ширины viewport */
     max-width: 700px;
-    /* Максимальная ширина в пикселях, чтобы избежать слишком больших изображений */
   }
 }
 
@@ -1149,7 +1126,7 @@ img:hover {
     margin: 0 auto;
     height: 1px;
   }
-  .modal.show {
+  .modal {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1258,7 +1235,6 @@ img:hover {
     font-style: normal;
     font-weight: 400;
     line-height: 100%;
-    /* 28px */
     margin-left: 0px;
   }
   .main_gallery-dot {
