--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,8 +45,6 @@ img:hover{
 
 }
 
-
-
 .modal_worktime{
     color: #FFF;
     width: 170px;
@@ -62,17 +60,6 @@ img:hover{
   justify-content: space-between;
 }
 
-.menu-cross {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  transform: translateY(-50%);
-  width: 24px;
-  height: 24px;
-  cursor: pointer;
-  z-index: 999;
-}
 
 .modal {
   color: #FFF;
@@ -532,6 +519,12 @@ font-weight: 400;
 line-height: 100%;
 }
 
+.cross{
+  position: absolute;
+  margin-top: 43px;
+  margin-left: -105px;
+}
+
 .subscribe{
   display:flex;
   flex-direction: column;
@@ -732,7 +725,6 @@ line-height: 140.625%;
     cursor: pointer;
   }
 
-  /* Style the button to your preference */
   .header_tickets-text {
     padding: 8px 16px;
     color: black;
@@ -741,19 +733,7 @@ line-height: 140.625%;
     cursor: pointer;
   }
 
-  .logo{
-    position:absolute;
-    z-index: 1000000;
-  }
 
-  .menu-cross {
-    position: absolute;
-    left: 10%;
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-    z-index: 999; /* Убедитесь, что значением z-index выше, чем у окна, чтобы крестик был поверх остального контента */
-  }
 
 
 @media screen and (min-width: 768px) and (max-width: 1279px){
@@ -765,7 +745,14 @@ line-height: 140.625%;
     margin-top: 40px;
   }
 
-
+  .cross{
+  position: absolute;
+  left: 3.5%;
+  top: 18%;
+  margin-top: 0px;
+  margin-left: 0px;
+    position: absolute;
+  }
 
   .modal__content {
     margin-left: 31px;
@@ -989,11 +976,19 @@ left: 41.3%
     margin-right: 65px;
   }
 
+  .modal--navigation{
+    margin-right: 20px;
+  }
+
   .footer_copyrights2{
   }
 }
 
-
+@media screen and (min-width: 768px) and (max-width: 1000px){
+  .cross{
+    left: 4.5%;
+  }
+}
 
 
 @media screen and (min-width: 0px) and (max-width: 767px){
@@ -1002,6 +997,17 @@ left: 41.3%
       width: 90%;
       margin: 0 auto;
       height: 1px;
+  }
+
+  .modal--navigation {
+    margin-right: 20px;
+  }
+
+
+  .cross{
+      position: absolute;
+      margin-left: 20px;
+      margin-top: 45px;
   }
 
   .modal{
@@ -1147,7 +1153,7 @@ margin-left: 0px;
     top: -385%;
     left: 0;
     transform: translateY(50%);
-    z-index: 99999999999;
+    z-index: 1;
     margin-left: 20px;
   }
 
@@ -1243,6 +1249,8 @@ height: 931px;
   margin-left: 20px;
   top: 65%;
 }
+
+
 
 .footer_block4{
   position: absolute;
