--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,11 +9,42 @@
   min-Height: 100vh;
 }
 
+button {
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+button:hover {
+  transform: scale(1.05);
+}
+
 article{
   max-width: 1280px;
   margin: 0 auto;
 }
 
+textarea{
+  cursor:pointer;
+
+}
+
+.footer_subscribe-textarea:hover,
+.footer_subscribe-textarea:focus,
+.footer_subscribe-textarea:active {
+  border-color: #007bff;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #007bff;
+}
+
+.header_tickets {
+  transition: transform 0.1s, box-shadow 0.3s;
+
+}
+
+.header_tickets:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
 img:hover{
   cursor:pointer;
 }
@@ -32,17 +63,12 @@ a {
   transition: color 0.3s;
 }
 
-a:hover {
-  color: #007bff;
-}
-
 
 img{
   transition: transform 0.3s,
   }
 img:hover{
   transform: scale(1.05);
-
 }
 
 .modal_worktime{
